compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__calling_fn_literal.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main() {\n  fn(x) { x }(1)\n}\n"
---
----- SOURCE CODE
pub fn main() {
  fn(x) { x }(1)
}


----- COMPILED JAVASCRIPT
export function main() {
  return ((x) => { return x; })(1);
}
