compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__function_formatting3.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn math(x, y) {\n  fn() {\n    x + y\n    x - y\n    2 * x\n  }\n}"
---
----- SOURCE CODE

pub fn math(x, y) {
  fn() {
    x + y
    x - y
    2 * x
  }
}

----- COMPILED JAVASCRIPT
export function math(x, y) {
  return () => {
    x + y;
    x - y;
    return 2 * x;
  };
}
