compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__pipe_shadow_import.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\n        import foo.{println}\n        pub fn main() {\n          let println =\n            \"oh dear\"\n            |> println\n          println\n        }"
---
import * as $foo from "../foo.mjs";
import { println } from "../foo.mjs";

export function main() {
  let println$1 = (() => {
    let _pipe = "oh dear";
    return println(_pipe);
  })();
  return println$1;
}
